--- a/app/src/main/res/layout/activity_knights_tour_main.xml
+++ b/app/src/main/res/layout/activity_knights_tour_main.xml
@@ -14,11 +14,18 @@
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
 
+    <com.virtualprodigy.theknightstour.Layout.KnightsSurfaceView.KnightsSurfaceView
+        android:id="@+id/knights_tour_gui"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/knights_moves_display"
+        android:layout_below="@+id/hello" />
+
     <TextView
-        android:layout_alignParentBottom="true"
         android:id="@+id/knights_moves_display"
         android:layout_width="fill_parent"
-        android:scrollbars = "vertical"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
         android:fadeScrollbars="false"
-        android:layout_height="100dp" />
+        android:scrollbars="vertical" />
 </RelativeLayout>
